made pageNotFound + changed animations + add more style on home page + planet

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,9 +1,24 @@
-
+//?---------------------------FONT-FACES----------------------
 @font-face {
     font-family: "main-font";
     src: url(../assets/fonts/Orbitron-Regular.ttf);
 }
 
+@font-face{
+    font-family:"text-regular";
+    src: url(../assets/fonts/Lato-Italic.ttf);
+}
+
+@font-face{
+    font-family:"text-light";
+    src: url(../assets/fonts/Lato-Light.ttf);
+}
+
+@font-face {
+    font-family: "text-italic";
+    src: url(../assets/fonts/Lato-LightItalic.ttf);
+}
+//?-----------------------------MIXINS----------------------
 
 @mixin verticalFlex{
     display: flex;
@@ -15,6 +30,17 @@
     flex-direction: row;
 }
 
+//?----------------------------VARIABLES------------------------
+$main-color: #EAD8C6;
+
+//?----------------------------BREAKPOINTS----------------------
+$breakpoint-mobile: 768px;
+
+@mixin mobile-only {
+    @media (max-width: $breakpoint-mobile) {
+        @content;
+    }
+}
 
 
 //?-----------------------------General-Config--------------------
@@ -28,10 +54,9 @@ body {
     background: linear-gradient(108deg, rgba(0,36,73,1) 0%, rgba(1,15,53,1) 48%, rgba(0,0,0,1) 100%);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
     margin: 0;
-
     font-family: "main-font";
+    color: $main-color;
 
 }
 
