--- a/src/styles/animation/_header-animation.scss
+++ b/src/styles/animation/_header-animation.scss
@@ -1,5 +1,15 @@
 @keyframes pulse{
-    to{
+    0%{
+        box-shadow: 0 0 0 rgba(255, 255, 255, 1);
+
+    }
+    50%{
         box-shadow: 0 0 0 25px rgba(255, 255, 255,0);
+    }
+}
+
+@keyframes rotate {
+    to{
+        transform: scale(0.98);
     }
 }
