--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -2,10 +2,13 @@
 
 .header {
     background: linear-gradient(108deg, rgba(0, 36, 73, 1) 0%, rgba(1, 15, 53, 1) 48%, rgba(0, 0, 0, 1) 100%);
-    height: 300px;
+    height: 260px;
     width: 100%;
     position: relative;
-    border-bottom: 2px solid #EAD8C6;
+    border-bottom: 2px solid $main-color;
+    @include mobile-only{
+        height: 220px;
+    }
 
     &__logo-container {
         width: 200px;
@@ -13,12 +16,24 @@
         overflow: hidden;
         position: absolute;
         bottom: 40px;
-        left: 49%;
+        left: 50%;
         transform: translate(-50%);
         border-radius: 100px;
+        @include mobile-only{
+            width: 120px;
+            height: 120px;
+            bottom: 30px;
+            left: 50%;
+        }
+        :hover{
+            animation: rotate 0.2s forwards ease-in-out;
+        }
         &--pulsing{
-            box-shadow: 0 0 0 rgba(255, 255, 255, 1);
-            animation: pulse 2.4s linear infinite;
+            animation: pulse 4.8s 2.4s linear infinite;
+            @include mobile-only{
+                animation:none;
+
+            }
         }
     }
 
@@ -27,13 +42,21 @@
         height: 110%;
         margin-left: -8px;
         margin-top: -4px;
+        @include mobile-only{
+            margin-left: -5px;
+        }
+        
     }
 
     &__navigation {
         padding: 140px;
+        @include mobile-only{
+            padding-left: 28%;
+            padding-right:28%;
+        }
 
         &__element {
-            transition: 0.2s ease-in;
+            transition: 0.1s ease-in;
 
             &:hover {
                 transform: scale(1.1);
@@ -42,16 +65,34 @@
     }
 
     &__navigation-container {
-        color: #EAD8C6;
         @include horizontalFlex;
         justify-content: space-between;
         width: 100%;
         font-size: 24px;
+        @include mobile-only{
+            margin-top: -80px;
+            font-size: 16px;
+
+        }
+
+        & li :nth-child(1), & li:nth-child(2){
+            @include mobile-only{
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+        }
+        }
     }
 }
 
 
 
 .nav--active {
-    text-decoration: underline;
+    border-bottom: 2px solid;
+    @include mobile-only{
+        text-decoration: none;
+        border-right: 2px solid;
+        border-left: 2px solid;
+        
+    }
 }
