--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import "./settings";
 @import "./pages/home";
-
-@import "./components/header.scss";
+@import "./pages/page-not-found";
+@import "./components/header";
+@import "./components/footer";
