--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,5 +1,5 @@
 @import "../animation/home-animation";
-
+@import "../components/planet-audio";
 .home-main{
     @include verticalFlex;
     &__title-container{
