contact page visual done + manage page visual done + init Firebase

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,7 @@
 @import "./settings";
 @import "./pages/home";
 @import "./pages/page-not-found";
+@import "./pages/contact" ;
+@import "./pages/manage";
 @import "./components/header";
 @import "./components/footer";
