--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -4,13 +4,13 @@
     src: url(../assets/fonts/Orbitron-Regular.ttf);
 }
 
-@font-face{
-    font-family:"text-regular";
+@font-face {
+    font-family: "text-regular";
     src: url(../assets/fonts/Lato-Italic.ttf);
 }
 
-@font-face{
-    font-family:"text-light";
+@font-face {
+    font-family: "text-light";
     src: url(../assets/fonts/Lato-Light.ttf);
 }
 
@@ -18,17 +18,25 @@
     font-family: "text-italic";
     src: url(../assets/fonts/Lato-LightItalic.ttf);
 }
+
 //?-----------------------------MIXINS----------------------
 
-@mixin verticalFlex{
+@mixin verticalFlex {
     display: flex;
     flex-direction: column;
 }
 
-@mixin horizontalFlex{
+@mixin horizontalFlex {
     display: flex;
     flex-direction: row;
 }
+
+@mixin title-box {
+    background: linear-gradient(0deg, rgba(255,192,203,0.2) 0%, rgba(45,112,253,0.2) 100%);
+    box-shadow: 12px 12px 12px 12px rgba(0, 0, 0, 0.444);
+    border-radius: 18px 0px 18px 0px;
+}
+
 
 //?----------------------------VARIABLES------------------------
 $main-color: #EAD8C6;
@@ -51,7 +59,7 @@ $breakpoint-mobile: 768px;
 }
 
 body {
-    background: linear-gradient(108deg, rgba(0,36,73,1) 0%, rgba(1,15,53,1) 48%, rgba(0,0,0,1) 100%);
+    background: linear-gradient(108deg, rgba(0, 36, 73, 1) 0%, rgba(1, 15, 53, 1) 48%, rgba(0, 0, 0, 1) 100%);
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0;
@@ -67,4 +75,8 @@ li {
 a {
     color: inherit;
     text-decoration: none;
+}
+
+input, textarea{
+    outline:none;
 }
